Fix layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -11,8 +11,9 @@ body {
   box-sizing: border-box;
 }
 
-#root {
+html, body, #root, .class {
   height: 100%;
+  width: 100%;
 }
 
 code {
